# graphql-template-rust

./: Cargo.toml  MakeFile  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/: chat_room.rs  lib.rs  members.rs  posts.rs  prelude.rs  teams.rs  tests.rs
entity/src/chats/: mod.rs  query.rs
entity/src/teams/: mod.rs  models.rs  mutation.rs  query.rs
entity/src/users/: mutation.rs
migration/: Cargo.toml  MakeFile
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220905_111757_create_members.rs  m20220905_151853_create_chat_room.rs
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2022-09-04-123507_create_team/: down.sql  up.sql
migrations/2022-09-04-123712_create_member/: down.sql  up.sql
src/: db.rs  graphql_schema.rs  handlers.rs  main.rs  schema.rs  schema_graphql.rs
src/celery/: mod.rs
src/chats/: mod.rs  models.rs  mutation.rs  subscription.rs  test.rs
src/models/: errors.rs  mod.rs  team.rs
src/posts/: mod.rs  models.rs  mutation.rs  query.rs
src/teams/: mod.rs  mutation.rs
src/users/: members.rs  mod.rs  modle.rs  query.rs
