[package]
name = "rust-graphql-example"
version = "0.1.0"
authors = ["Ian Wilson <iwilsonq@gmail.com>"]
edition = "2021"

[workspace]
members = [".", "entity", "migration"]


[dependencies]
actix-web = "4.0.1"
actix-cors = "0.6"
async-graphql = "4.0.4"
async-graphql-actix-web = "4.0.4"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.24"
serde = {version = "1.0.144", features = ["derive"] }
serde_derive = "1.0.144"
serde_json = "1.0.85"


entity = { path = "entity" }
migration = { path = "migration" }
