[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[lib]
name = "entity"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0" }
async-graphql = { version = "4.0.4", features = ["chrono"]}
async-graphql-actix-web = "4.0.4"
