[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[lib]
name = "entity"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.144", features = ["derive"] }
async-graphql = { version = "4.0.4", features = ["chrono"]}
async-graphql-actix-web = "4.0.4"
tokio = { version = "*", features = ["full"] }
futures = "0.3.24"
futures-channel = "0.3.24"
futures-util = "0.3.24"
serde_json = "1.0.85"
tokio-stream = "0.1.9"
chrono = { version = "*", features = ["serde"]}
actix-web = "4.0.1"
actix-cors = "0.6"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }